syntax = "proto3";

option java_multiple_files = true;
option java_package = "fr.aleclerc.windpath.service.path.api";
option java_outer_classname = "PathDomainService";

package path.commands;
import "common.proto";
import "gpx.proto";
service Path {
    rpc apply (PathCommand) returns  (path.common.GenericResponse)  {
    }
}

message PathCommand {
    path.common.ProtoUUID id = 1;
    oneof command {
        CreatePathFromGpxCommand createPathFromGpxCommand = 2;
        RenamePathCommand renamePathCommand = 3;
    }
}

message CreatePathFromGpxCommand {
    reserved 1;
    path.gpx.Gpx gpx = 2;
}

message RenamePathCommand {
    string name = 1;
}

message PathCreatedFromGpxEvent {
    path.common.ProtoUUID id = 1;
    string name = 2;
}

message PathRenamedEvent {
    path.common.ProtoUUID id = 1;
    string name = 2;
}
